--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "nms.py"
-description = "NMS python hooking API"
+name = "NMS.py"
+description = "No Man's Sky python modding API"
 requires-python = ">=3.9"
 # TODO: Add
-license = {file = "LICENSE.txt"}
-keywords = ["hooking", "games", "hacking"]
+license = {file = "LICENSE.md"}
+keywords = ["hooking", "games", "hacking", "modding"]
 authors = [
   {name = "monkeyman192"}
 ]
@@ -22,18 +22,20 @@ classifiers = [
   "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
-  "cyminhook~=0.1.2", "psutil~=5.9.5",
+  "pymhf"
 ]
+version = "0.7.0"
+
+[tool.setuptools.package-dir]
+nmspy = "nmspy"
 
 [project.urls]
 Homepage = "https://github.com/monkeyman192/NMS.py"
 Repository = "https://github.com/monkeyman192/NMS.py"
 
+[project.entry-points.pymhflib]
+nmspy = "nmspy"
+
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
-
-[tool.pytest.ini_options]
-testpaths = [
-    "tests",
-]
