--- a/nmspy/pymhf.cfg
+++ b/nmspy/pymhf.cfg
@@ -1,7 +1,7 @@
 [binary]
+exe = NMS.exe
 path = C:/Games/No Man's Sky/Binaries/NMS.exe
-root_dir = C:/Games/No Man's Sky
-mod_dir = C:/Games/No Man's Sky/mods
+mod_dir = None
 # steam_gameid = 275850
 internal_mod_dir = _internals\mods
 # hash = 014f5fd1837e2bd8356669b92109fd3add116137
