--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 dependencies = [
   "pymhf @ git+https://github.com/monkeyman192/pyMHF.git@master"
 ]
-version = "0.7.0"
+version = "0.7.1-pre1"
 
 [tool.setuptools.package-dir]
 nmspy = "nmspy"
