--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip uv
-          uv sync --frozen --dev
+          uv sync --frozen --group dev
       - name: Build Python ${{ matrix.py_ver.version}} wheel
         run: uv build
       - name: Lint and format code
@@ -86,3 +86,4 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
           attestations: true
+          verbose: true
