--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "NMS.py"
+name = "NMSpy"
 description = "No Man's Sky python modding API"
 requires-python = ">=3.9"
 # TODO: Add
@@ -25,6 +25,14 @@ dependencies = [
   "pymhf[gui]==0.1.8.dev9"
 ]
 dynamic = ["version"]
+
+[dependency-groups]
+dev = [
+  "pytest",
+  "ruff",
+  "setuptools_scm",
+  "twine",
+]
 
 [tool.uv]
 python-preference = "only-system"
