--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,14 +29,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip uv
-          uv sync --frozen --group dev
+          uv sync --frozen --all-groups --all-extras
       - name: Build Python ${{ matrix.py_ver.version}} wheel
         run: uv build
       - name: Lint and format code
-        run: uv run python -m twine check ./dist/*
-          # uv run ruff check ./NMSpy
-          # uv run ruff format --check ./NMSpy
-          # uv run python -m twine check ./dist/*
+        run: |
+          uv run python -m twine check ./dist/*
+          uv run ruff check ./nmspy
+          uv run ruff format --check ./nmspy
+          uv run python -m twine check ./dist/*
       - name: Upload Wheels
         uses: actions/upload-artifact@v4
         with:
@@ -67,6 +68,8 @@ jobs:
 
   test-release:
     name: Release NMSpy wheels and source build to test-PyPI
+    # Release to the test PyPI if we have merged into master or if we have tagged.
+    if: ${{ (github.ref == 'refs/heads/master') || startsWith(github.ref, 'refs/tags') }}
     needs:
       - build_test
     runs-on: ubuntu-latest
@@ -86,4 +89,3 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
           attestations: true
-          verbose: true
