--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ maintainers = [
   {name = "monkeyman192"}
 ]
 classifiers = [
-  "Development Status :: 2 - Pre-Alpha",
+  "Development Status :: 3 - Alpha",
   "Environment :: Win32 (MS Windows)",
   "License :: OSI Approved :: MIT License",
   "Operating System :: Microsoft",
@@ -22,9 +22,9 @@ classifiers = [
   "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
-  "pymhf[gui]==0.1.8"
+  "pymhf[gui]>=0.1.13"
 ]
-dynamic = ["version"]
+version = "146194.0"
 
 [dependency-groups]
 dev = [
@@ -37,14 +37,6 @@ dev = [
 [tool.uv]
 python-preference = "only-system"
 
-[tool.uv.sources]
-pymhf = { index = "pypi_test" }
-
-[[tool.uv.index]]
-name = "pypi_test"
-url = "https://test.pypi.org/simple/"
-explicit = true
-
 [tool.setuptools.package-dir]
 nmspy = "nmspy"
 
@@ -53,7 +45,10 @@ Homepage = "https://github.com/monkeyman192/NMS.py"
 Repository = "https://github.com/monkeyman192/NMS.py.git"
 
 [project.entry-points.pymhflib]
-nmspy = "nmspy"
+"nmspy" = "nmspy"
+
+[project.entry-points.pymhfcmd]
+check = "check"
 
 [tool.setuptools_scm]
 local_scheme = "no-local-version"
