--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,12 +55,16 @@ jobs:
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
+      - name: Check whether to release
+        uses: MathieuMoalic/action-python-package-new-version@v1.0.5
       - name: Download files for release
+        if: env.PUBLISHING == 'true'
         uses: actions/download-artifact@v4
         with:
           name: python-package-distributions
           path: dist/
       - name: Publish package distributions to PyPI
+        if: env.PUBLISHING == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           attestations: true
@@ -78,12 +82,16 @@ jobs:
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
+      - name: Check whether to release
+        uses: MathieuMoalic/action-python-package-new-version@v1.0.5
       - name: Download files for release
+        if: env.PUBLISHING == 'true'
         uses: actions/download-artifact@v4
         with:
           name: python-package-distributions
           path: dist/
       - name: Publish package distributions to PyPI
+        if: env.PUBLISHING == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
