--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,13 +57,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Check whether to release on pypi.org
-        run: |
-          ./.github/scripts/version_check.sh
-      - name: Check whether to release on test.pypi.org
-        run: |
-          export PYPI_INDEX=test.pypi.org
-          ./.github/scripts/version_check.sh
+      - name: Check whether to release on pypi or test.pypi
+        id: version-check
+        uses: MathieuMoalic/action-python-package-new-version@v2.0.1
+        with:
+          indexes: pypi.org test.pypi.org
       - name: Globalise determined version
         id: set_version
         run: echo "package_version=${{ env.PACKAGE_VERSION }}" >> "$GITHUB_OUTPUT"
