--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 dependencies = [
   "pymhf[gui]>=0.1.15"
 ]
-version = "147408.1"
+version = "147803.0"
 
 [dependency-groups]
 dev = [
@@ -33,6 +33,7 @@ dev = [
   "ruff",
   "setuptools_scm",
   "twine",
+  "libcst",
 ]
 
 [tool.uv]
