--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,11 +13,17 @@ on:
 jobs:
   build_test:
     name: Build artefacts
-    runs-on: Windows-latest
+    runs-on: Windows-2025
     strategy:
       fail-fast: false
       matrix:
-        py_ver: [{version: '3.9'}] # , {version: '3.10'}, {version: '3.11'}]
+        py_ver: [
+          {version: '3.9'},
+          {version: '3.10'},
+          {version: '3.11'},
+          {version: '3.12'},
+          {version: '3.13'},
+        ]
     steps:
       - uses: actions/checkout@v4
         with:
